--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "multi-range-slider-vue": "^1.1.4",
     "vue": "^2.6.14"
   },
   "devDependencies": {
